react-portfolio/src/App.css
/* ... */
.fa-github, .fa-external-link {
    font-size: 30px;
    color: #CCD6F6;
}

.fa-github:hover, .fa-external-link:hover {
    color: #64FFDA;
}

.stayTuned {
    text-align: center;
    margin-top: 100px;
    text-decoration: underline;
}

.codingActivity {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 100px;
}

.codingActivity img {
    width: 50%;
    margin-top: 20px;
}

.codingActivity p {
    font-size: 30px;
    color: #64FFDA;
}


/*   ---------------- Contact Component --------------- */

.contactSection {
    position: fixed;
    bottom: 0;
    right: 0;
    margin-right: 50px; 
    background-color: transparent;
    z-index: 995; 
}

.contactIcons i {
    margin: 20px -12px 10px 0;
    font-size: 30px;
    color: #CCD6F6;
    background-color: transparent;  
}

.contactIcons i:hover {
    color: #64FFDA;
    background-color: transparent;  
}

.contactIcons .fa-github {
    font-size: 35px;
    background-color: transparent;  
}

.contactIcons a {
    background-color: transparent;  
}

.contactIcons .fa-envelope {
    font-size: 28px;
    background-color: transparent;  
}

.contactIcons {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin-bottom: 10px;
    background-color: transparent;  
}

.contactLine {
    border-right: 2px solid #CCD6F6;
    height: 200px;  
    background-color: transparent;  
}



/* ---------------- Fading Components ---------------------- */

.fade-in {
    opacity: 0;
    transition: opacity 1s ease-in;
}
.fade-inLonger {
    opacity: 0;
    transition: opacity 2s ease-in
}

.appear {
    opacity: 1;
}

@media only screen and (max-width: 1450px) {
    .main .name {
        font-size: 90px;
    }
    .main {
        margin-left: 150px;
    }
    .sectionTitles {
        width: 75%;
    }

    .aboutBody {
        width: 70%;
    }

    .contactSection {
        margin-right: 50px;
    }

    .projectImage img {
        width: 600px;
        height: 300px;
    }
    .projectSide {
        width: 300px;
    }

    .projectDescription {
        width: 400px;
        font-size: 14px;
    }

    .codingActivity img {
        width: 90%;
    }
}


@media only screen and (max-width: 1250px) {
    .main {
        flex-direction: column-reverse;
        width: 100%;
        margin: 0 auto;
    }
    .intro {
        width: 100%;
        text-align: center;
        
    }
    .intro .name {
        margin: 0;
        margin: 0 auto
    }

    .intro-img {
        width: 100%;
        text-align: center;
    }

    .sectionTitles {
        font-size: 100px;
    }

    .skills {
        width: 80%;
    }

    .skillsIcons {
        flex-wrap: wrap;
    }

    .skillsIcons figure {
        margin: 10px 10px;
    }

    .experienceContainer {
        width: 85%;
        height: 550px;
    }
    .codingActivity img {
        width: 80%;
    }

    .contactSection {
        background-color: #2b2b2b;
        box-shadow: 2px 2px 4px 4px rgba(0,0,0,.2);
        width: 100%;
        height: 40px;
        margin: 0;
        bottom: -3px;
    }

    .contactIcons {
        flex-direction: row;
        width: 25%;
        margin: 0 auto;
        justify-content: space-around;
    }

    .contactIcons i {
        margin: 0 10px;
    }
    .contactLine {
        display: none;
    }
    

}

@media only screen and (max-width: 1000px) {
    .projectContainer {
        flex-direction: column;
        margin-top: 10px;
    }
    .projectTitle {
        text-align: center;
        margin: 0 0 10px 0;
    }

    .projectDescription {
        margin: 0 auto;
        text-align: center;
    }

    .projectSide {
        width: 100%;
    }

    .tools {
        width: 80%;
        margin: 0 auto;
    }

}

@media only screen and (max-width: 850px) {
    .intro-img img{
        height: 400px;
    }

    .myname span {
        font-size: 30px;
    }

    .main .name {
        font-size: 75px;
    }

    .main .software {
        font-size: 30px;
    }

    .sectionTitles {
        font-size: 80px;
        width: 80%;
    }


    .contactLine {
        height: 100px;
    }

    .aboutBody {
        width: 80%;
    }

    .employers li {
        width: 185px;
    }

    .employer span {
        display: block;
    }
    .date {
        font-size: 14px;
    }

    .employerDescription li {
        font-size: 14px;
    }

    .experienceContainer {
        width: 95%;
    }

    .projectImage img {
        width: 450px;
        height: 200px;
    }


}
/* ... */

